Ajout des participants aux tournois
Et divers autres petits ajouts

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ WebApplication/obj/WebApplication.csproj.nuget.g.targets
 WebApplication/obj/WebApplication.csproj.nuget.g.props
 WebApplication/obj/WebApplication.csproj.nuget.cache
 WebApplication/obj/project.assets.json
+.vs/WebApplication/v15/.suo
